# LLM-BMtools

./: .gitignore  MODAL_DEPLOY_GUIDE.md  README.md  RESULTS.md  config.example.yaml  config_modal.yaml  deploy_devstral.py  deploy_gptoss.py  deploy_granite.py  deploy_llama4.py  generate_results_md.py  grade_csv_results.py  judge_csv_results.py  llm_deploy.py  main.py  modal_deploy_all.py  modal_llm_serve.py  modal_runner.py  pyproject.toml  regrade_contains.py  requirements.txt  rescore.py  run_ablation_3.py  run_all_strategies.bat  run_evaluation_on_modal.ipynb  run_full.bat  run_full.sh  run_phase2_judge.py  summarize_csv.py  test_completions.py  vllm_serve.py
.claude/: settings.json
baseline/: README.md  (+4 more)
data/toolJSONprocessing/: README.md  __init__.py  pyproject.toml
data/toolJSONprocessing/codegen_scripts/: direct_prompting_code.py  general_code_generation.py
data/toolJSONprocessing/experimental_scripts/: qa_aggregation.py  qa_classifier.py  qa_comparison.py
data/toolJSONprocessing/extensions/few_shot_sc/: code_executor.py  exemplar_pool.py  exemplar_selector.py  prompts.py  self_consistency.py  verifier.py
data/toolJSONprocessing/extensions/plan_then_code/: __init__.py  planner.py  prompts.py
data/toolJSONprocessing/extensions/pruning/: __init__.py  coverage_eval.py  embedding_pruner.py  flattening.py  llm_pruner.py  path_extractor.py  reconstruct.py
data/toolJSONprocessing/generate_qa_pairs/: README.md  qa_pairs_generation.py  task_list.py
data/toolJSONprocessing/generate_qa_pairs/tasks/: base.py  booking_rooms_with_availability.py  utils.py
(+59 files in other folders)
